# Information-retrieval-using-RAG

./: .gitignore  README.md  config.py  main.py  pyproject.toml
.github/workflows/: claude-pr-review.yml  jira-to-pr.yml
docs/: jira-automation-setup.md
models/: chat.py  document.py
routers/: chat.py  documents.py
services/: ingestion_service.py  rag_service.py  web_search.py
services/embeddings/: base.py  factory.py  openai_embeddings.py  qwen_embeddings.py
services/llm/: base.py  factory.py  openai_llm.py
services/vector_store/: base.py  factory.py  faiss_store.py
