[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "Chatbot API built with FastAPI"
authors = ["Hemakumar Gokulakannan <hemakumargokul@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.0"
pydantic-settings = "^2.0"
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
langchain-text-splitters = "^0.3.0"
openai = "^1.0.0"
faiss-cpu = "^1.9.0"
pypdf = "^5.0.0"
sentence-transformers = "^3.0.0"
hf_xet = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

